package Proto;

message Vector3
{
	required float x;
	required float y;
	required float z;
}


